# arogine

./: .gitignore  CMakeLists.txt  README.md
common/: VoxelImage.cpp  VoxelImage.h  shader.cpp  shader.hpp  text2D.cpp  texture.cpp
src/: BaseShader.cpp  BaseShader.h  Camera.cpp  Camera.h  RaymarchScene.cpp  RaymarchScene.h  RaymarchShader.cpp  RaymarchShader.h  ShaderHandler.cpp  ShaderHandler.h  System.cpp  System.h  VoxelChunk.cpp  VoxelChunk.h  VoxelScene.cpp  VoxelScene.h  Window.cpp  Window.h  defs.hpp  doom.png.ari  doom2.png.ari  main.cpp  main_backup.cpp  test.png.ari  voxel.cpp  voxel.hpp
src/common/: VoxelImage.cpp  VoxelImage.h
src/shader/: raymarch.fs  raymarch.vs  simple.fs  simple.vs
tools/: img2ari.php
